--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -3,7 +3,7 @@
     <div class= "hero-body">
       <div class= "container">
         <h1 class= "title">
-          Veja os ultimos produtos da FEUFSCar
+          Veja os mais novos produtos da FEUFSCar
         </h1>
       </div>
     </div>
